src/cfg.txt
<program>    ::= <stmts>
<stmt>       ::= <if> | <block> | <while> | <break> | <continue> | <var_decl> | <fn_decl> | <return> | <expr_stmt>
<stmts>      ::= <stmt>* 
<if>         ::= 'if' <expr> <stmt> | 'if' <expr> <stmt> 'else' <stmt> 
<while>      ::= 'while' <expr> <stmt>
<block>      ::= '{' <stmts> '}'
<break>      ::= 'break' ';'
<continue>   ::= 'continue' ';'
<expr_stmt>  ::= <expr> ';'
<return>     ::= 'return' <expr> ';'
<var_decl>   ::= 'let' <ntp> '=' <expr> ';'
<fn_decl>    ::= 'fn' <name> '(' <params>? ')' ':' <type> <stmt>
<params>     ::= <ntp> (',' <ntp>)*

<expr>       ::= <assignment>
<assignment> ::= <name> '=' <assignment> | '*'<atom> '=' <assignment> | <logical>
<logcial>    ::= <equality> (<lop> <equality>)*
<equality>   ::= <comparison> (<eop> <comparison>)*
<comparison> ::= <term> (<cop> <term>)*
<term>       ::= <factor> (<top> <factor>)*
<factor>     ::= <factor> (<fop> <cast>)*
<cast>       ::= <unary> ('as' <type>)*
<unary>      ::= <unop> <unary> | '&' <name> | <call>
<call>       ::= <name> '(' <call_args>? ')'  | <atom>
<call_args>  ::= <expr> (',' <expr>)*
<atom>       ::= '(' <expr> ')' | <name> | <number> | 'true' | 'false'

<lop>        ::= '&&' | '||'
<eop>        ::= '==' | '!='
<cop>        ::= '<' | '<=' | '>' | '>='
<top>        ::= '+' | '-'
<fop>        ::= '*' | '/'
<unop>       ::= '-' | '!' | '*' | 'alloc'

<digit>      ::= [0-9]
<alpha>      ::= [a-zA-Z_]
<number>     ::= digit+
<name>       ::= <alpha>(<alpha>|<digit>)*

<ntp>        ::= <name> ':' <type>
<type>       ::= 'ptr' '<' <type> '>' | <type_atom>
<type_atom>  ::= 'int' | 'bool'

TODO
- create function registry that is a list which contains reference to all FnDecl IR nodes.
- label resolver goes through the IR of each function, resolving all labels to indices (local address) <- this is safe since only local jumps are allowed.
- executor, when met with call instruction, references the function registry to figure out which address to set the program counter and which parameters to prelude.
- address is of type Addr(functionName:string | undefined, index:int);
